# scoring-api

./: .gitignore  LICENSE  README.md  api.py  functional_test.py  pyproject.toml  pytest.ini  scoring.py  store.py  test.py
tests/: conftest.py  fields_test.py  functional_test.py  integration_test.py  unit_test.py
tests/integration/: integration_test.py
tests/unit/: fields_test.py
