[tool.poetry]
name = "scoring_api"
version = "0.1.0"
description = "poetry completions zsh > ~/.zfunc/_poetry"
authors = ["6ejibiu <akimovpnz@live.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
pytest = "^5.4.1"
redis = "^3.4.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
